slightly better initialization of model

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Limited tf.compat.v2.summary API due to missing TensorBoard installation.\n",
+      "WARNING:root:Limited tf.compat.v2.summary API due to missing TensorBoard installation.\n",
+      "WARNING:root:Limited tf.compat.v2.summary API due to missing TensorBoard installation.\n",
+      "WARNING:root:Limited tf.summary API due to missing TensorBoard installation.\n"
+     ]
+    }
+   ],
    "source": [
     "from model import BeatCNN\n",
     "from audio import analyze\n",
@@ -20,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,21 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Computing the predictions\n",
     "model = BeatCNN()\n",
     "audio = analyze(path)\n",
-    "model(audio[:1000])  # just to initialize weights, awkward and slow\n",
     "model.load(\"./weights/600_16.wgh\")\n",
     "pred = model(audio).numpy().astype('float64')[:, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +128,7 @@
        "Text(0.5, 0, 'BPMs')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
